--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,13 @@
     <string name="entrer_le_code1">entrer le code</string>
     <string name="mail_verification">Mail Verification</string>
     <string name="repeat_password3">repeat password</string>
+    <string name="title_activity_maps">MapsActivity</string>
+    <string name="todooo">TODO</string>
+    <string name="textviewww">TextView</string>
+    <string name="textviewwwwww">TextView</string>
+    <string name="textviewwwww">TextView</string>
+    <string name="textvieww">TextView</string>
+    <string name="todooooooo">TODO</string>
+    <string name="textviewzlokijhgv">TextView</string>
+    <string name="todooooooooo">TODO</string>
 </resources>
