--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,21 @@
     <string name="todooooooo">TODO</string>
     <string name="textviewzlokijhgv">TextView</string>
     <string name="todooooooooo">TODO</string>
+    <string name="todojj">TODO</string>
+    <string name="show_me">Show Me</string>
+    <string name="_20_km">20 Km</string>
+    <string name="log_out">LOG OUT</string>
+    <string name="terms_of_service">Terms of Service</string>
+    <string name="licenses">Licenses</string>
+    <string name="legal">Legal</string>
+    <string name="delete_account">Delete Account</string>
+    <string name="privacy_policy">Privacy Policy</string>
+    <string name="share">Share</string>
+    <string name="_50_14">50-14</string>
+    <string name="logoutset">Logout</string>
+    <string name="purchase">Purchase</string>
+    <string name="notification">Notification</string>
+    <string name="todoopijhugjkhvj">TODO</string>
+    <string name="user_imageitem">user_image</string>
+
 </resources>
