--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,5 +73,6 @@
     <string name="notification">Notification</string>
     <string name="todoopijhugjkhvj">TODO</string>
     <string name="user_imageitem">user_image</string>
+    <string name="chats">Chats</string>
 
 </resources>
