--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,5 +74,6 @@
     <string name="todoopijhugjkhvj">TODO</string>
     <string name="user_imageitem">user_image</string>
     <string name="chats">Chats</string>
+    <string name="how_are_you">How are you !</string>
 
 </resources>
