--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,5 +75,5 @@
     <string name="user_imageitem">user_image</string>
     <string name="chats">Chats</string>
     <string name="how_are_you">How are you !</string>
-
+    <string name="mapbox_access_token">pk.eyJ1Ijoia2hpdGVtMDkiLCJhIjoiY2xjYWRnMHdmMW9hMTNxbDdpejgzbHE0ZCJ9.RDSgSh_y07tGv5TItpKpeg</string>
 </resources>
